update content and images

--- a/index.html
+++ b/index.html
@@ -114,8 +114,10 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>35</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor & Certificate</span>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor of Science
+                      &mdash; Chemical Engineering</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Certificate:</strong> <span>Data Analytics &
+                      Visualization</span>
                   </li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong>
                     <span>gabriel.houston.allen@gmail.com</span>
@@ -692,7 +694,7 @@
           </div>
 
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <form action="https://formspree.io/f/maylrkwp" method="POST" role="form" class="php-email-form">
               <div class="row">
                 <div class="form-group col-md-6">
                   <label for="name">Your Name</label>
@@ -742,7 +744,7 @@
       </div>
       <div class='credits'>Made by Gabe</div>
     </div>
-  </footer>End Footer
+  </footer>
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
