--- a/index.html
+++ b/index.html
@@ -694,24 +694,29 @@
           </div>
 
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="https://formspree.io/f/maylrkwp" method="POST">
+            <form action="https://formspree.io/f/maylrkwp" method="POST" role="form" class="php-email-form">
               <div class="row">
-                <div class="col-md-6">
+                <div class="form-group col-md-6">
                   <label for="name">Your Name</label>
-                  <input type="text" name="name" id="name" required>
+                  <input type="text" name="name" class="form-control" id="name" required>
                 </div>
                 <div class="form-group col-md-6">
                   <label for="name">Your Email</label>
-                  <input type="email" name="email" id="email" required>
+                  <input type="email" class="form-control" name="email" id="email" required>
                 </div>
               </div>
-              <div>
+              <div class="form-group">
                 <label for="name">Subject</label>
-                <input type="text" name="subject" id="subject" required>
+                <input type="text" class="form-control" name="subject" id="subject" required>
               </div>
-              <div>
+              <div class="form-group">
                 <label for="name">Message</label>
-                <textarea name="message" rows="10" required></textarea>
+                <textarea class="form-control" name="message" rows="10" required></textarea>
+              </div>
+              <div class="my-3">
+                <div class="loading">Loading</div>
+                <div class="error-message"></div>
+                <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
@@ -749,7 +754,7 @@
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <!-- <script src="assets/vendor/php-email-form/validate.js"></script> -->
+  <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/purecounter/purecounter.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/typed.js/typed.min.js"></script>
