--- a/index.html
+++ b/index.html
@@ -691,8 +691,8 @@
 
           </div>
 
-          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="https://formspree.io/f/maylrkwp" method="POST" role="form" class="php-email-form">
+          <div class="col-lg-7 mt-5 mt-lg--items-stretc0 d-flex alignh">
+            <form action="https://formspree.io/f/maylrkwp" method="POST" role="form">
               <div class="row">
                 <div class="form-group col-md-6">
                   <label for="name">Your Name</label>
