--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
           </div>
 
           <div class="col-lg-7 mt-5 mt-lg--items-stretc0 d-flex alignh">
-            <form action="https://formspree.io/f/maylrkwp" method="POST" role="form">
+            <form action="https://formspree.io/f/maylrkwp" method="POST" role="form" class="php-email-form">
               <div class="row">
                 <div class="form-group col-md-6">
                   <label for="name">Your Name</label>
