update skills section

--- a/index.html
+++ b/index.html
@@ -190,10 +190,89 @@
         </div>
 
       </div>
-    </section>End Facts Section -->
+    </section> -->
+    <!--End Facts Section -->
 
     <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills section-bg">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Skills</h2>
+          <p>Proficient in many analytical and visualization technologies such as Microsoft Excel, Python, JavaScript,
+            SQL/NoSQL Databases, Tableau, and more.</p>
+        </div>
+
+        <div class="row skills-content">
+
+          <div class="col-lg-6" data-aos="fade-up">
+
+            <ul id="hexGrid">
+              <li class="hex">
+                <a class="hexIn" href="https://www.python.org/" target="_blank">
+                  <img src="assets/img/icons8-python-96.svg" alt="python logo" />
+                  <h1>Python</h1>
+                  <p>Python is a general-purpose coding language that
+                    can be used for data science, back-end development, and web development.</p>
+                </a>
+              </li>
+              <li class="hex">
+                <a class="hexIn" href="https://www.javascript.com/" target="_blank">
+                  <img src="assets/img/icons8-javascript-96.svg" alt="javascript logo" />
+                  <h1>JavaScript</h1>
+                  <p>JavaScript is a scripting or programming language that allows you to implement complex features on
+                    web pages.</p>
+                </a>
+              </li>
+              <li class="hex">
+                <a class="hexIn" href="https://www.tableau.com/" target="_blank">
+                  <img src="assets/img/icons8-tableau-software-96.svg" alt="tableau logo" />
+                  <h1>Tableau</h1>
+                  <p>Tableau is a visual analytics platform transforming the way we use data to solve
+                    problems—empowering people and organizations to make the most of their data.</p>
+                </a>
+              </li>
+              <li class="hex">
+                <a class="hexIn" href="https://www.mongodb.com/" target="_blank">
+                  <img src="assets/img/icons8-mongodb-96.svg" alt="mongodb logo" />
+                  <h1>MongoDB</h1>
+                  <p>MongoDB is a source-available cross-platform document-oriented database program. Classified as a
+                    NoSQL database program, MongoDB uses JSON-like documents with optional schemas.</p>
+                </a>
+              </li>
+              <!-- <li class="hex">
+                <a class="hexIn" href="#">
+                  <img src="https://farm7.staticflickr.com/6083/6055581292_d94c2d90e3.jpg" alt="" />
+                  <h1>This is a title</h1>
+                  <p>Some sample text about the article this hexagon leads to</p>
+                </a>
+              </li>
+              <li class="hex">
+                <a class="hexIn" href="#">
+                  <img src="https://farm3.staticflickr.com/2827/10384422264_d9c7299146.jpg" alt="" />
+                  <h1>This is a title</h1>
+                  <p>Some sample text about the article this hexagon leads to</p>
+                </a>
+              </li>
+              <li class="hex">
+                <a class="hexIn" href="#">
+                  <img src="https://farm8.staticflickr.com/7187/6895047173_d4b1a0d798.jpg" alt="" />
+                  <h1>This is a title</h1>
+                  <p>Some sample text about the article this hexagon leads to</p>
+                </a>
+              </li> -->
+
+            </ul>
+
+          </div>
+
+
+        </div>
+
+      </div>
+    </section><!-- End Skills Section -->
+    <!--Saved Code For skills-->
+    <!-- <section id="skills" class="skills section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -263,7 +342,7 @@
         </div>
 
       </div>
-    </section><!-- End Skills Section -->
+    </section> -->
 
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
@@ -363,7 +442,7 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Under Construction</p>
+          <p>***Under Construction***</p>
         </div>
 
         <div class="row" data-aos="fade-up">
@@ -423,7 +502,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -476,7 +555,7 @@
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
-          </div>
+          </div> -->
 
         </div>
 
