major update project portfolio section

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div class="hero-container" data-aos="fade-in">
       <h1>Gabriel Allen</h1>
       <p>I'm a <span class="typed"
-          data-typed-items="Business Analyst, Data Analyst, Data Engineer, Project Manager"></span></p>
+          data-typed-items="Business Data Analyst, Machine Learning Engineer, Data Engineer, Data Scientist"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -442,62 +442,68 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>***Under Construction***</p>
+          <p>Data Analytics & Visualization</p>
         </div>
 
         <div class="row" data-aos="fade-up">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-app">EDA</li>
+              <li data-filter=".filter-card">ML</li>
+              <li data-filter=".filter-web">DASH</li>
             </ul>
           </div>
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/heart-thumb.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/heart-thumb.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="Heart Failure: An Early Warning Detection Model & Application"><i
+                    class="bx bx-plus"></i></a>
+                <a href="portfolio-details-heart.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/planet-thumb.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/planet-thumb.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox"
+                  title="Exoplanet Exploration: ML Model Development with Python & SciKit Learn"><i
+                    class="bx bx-plus"></i></a>
+                <a href="portfolio-details-planet.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/belly-thumb.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/belly-thumb.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox"
+                  title="Belly Button Bacteria Dashboard: Interactive Dashboarding with Plotly.js"><i
+                    class="bx bx-plus"></i></a>
+                <a href="portfolio-details-belly.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/pharma-thumb.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/pharma-thumb.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="S&P 500 Pharmaceuticals: EDA with Python & Yahoo Finance"><i
+                    class="bx bx-plus"></i></a>
+                <a href="portfolio-details-pharma.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -818,7 +824,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="https://bootstrapmade.com/" target="_blank">BootstrapMade</a>
       </div>
       <div class='credits'>Made by Gabe</div>
     </div>
